--- a/frontend/style.css
+++ b/frontend/style.css
@@ -3,6 +3,7 @@ body {
     padding: 0;
     background: url(https://d.wattpad.com/story_parts/950534230/images/163321f497fe8e68156918468528.jpg)no-repeat; 
     background-size: cover;
+    background-attachment: fixed;
 }
 #people {
     width: 80%;
@@ -13,16 +14,15 @@ body {
 }
 
 img {
-    max-width: 100%;
-    max-height: 100%;
+    width: 70%;
+    height: 70%;
 }
 
 .person {
     font-family: 'Montserrat', sans-serif;
-    /* border: 2px solid black; */
     text-align: center;
     min-width: 260px;
-    width: 30%;
+    width: 40%;
     margin: 30px 0;
     padding: 10px 0;
 }
@@ -36,68 +36,43 @@ img {
     color: black;
 }
 
-.btn {
-    font-size: 16px;
-}
+.logo {
+    float: left;
+  }
 
-
-/* Header */
-
-/* .header {
-    background-color: green;
-}
-
-ul {
+  nav {
+    float: right;
     width: 100%;
+}
+  nav ul {
+    width: 100%;
+    display: flex;
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: #333;
-    display: flex;
-    justify-content: center;
+    justify-content: space-around;
 }
-
-li a {
+  nav li {
+    float: left;
+  }
+  
+  li a {
     display: block;
     color: white;
     text-align: center;
-    padding: 15px 40px;
-    text-decoration: none;
-    font-size: 18px;
-}
-
-li a:hover {
-    background-color: #111;
-} */
-
-
-.logo {
-    float: left;
+    padding: 19px;
+    text-decoration: none black;
   }
-
-nav {
-    float: right;
-}
-
-nav ul {
-    margin: 50;
-    padding: 50;
-    list-style: none;
-}
-
-nav li {
-    display: inline-block; /*один из способов разместить элементы в строку*/
-}
 
 .container:after {
     content: "";
     display: table;
     clear: both;
+    position: fixed;
 }
 
-
-/* Register field */
 
 * {
     margin: 0;
@@ -105,25 +80,24 @@ nav li {
     font-family: sans-serif;
 }
 
+#form {
+    text-align: center;
+    border: 3px solid green;
+    padding: 15px;
+    margin-bottom: 15px;
+    position: fixed;
+    border-radius: 3%;
+}
+
 .block {
-    height: 280px;
-    width: 200px;
+    height: 333px;
+    width: 233px;
     margin: 40px auto 0;
     background-color: gray;
     border-radius: 3%;
     position: fixed;
     right: 3% ;
 }
-
-#form {
-    text-align: center;
-    border: 3px solid green;
-    padding: 15px;
-    border-radius: 7px;
-    margin-bottom: 15px;
-    position: relative;
-}
-
 p {
     font-weight: bold;
     margin: 10px 0;
@@ -138,58 +112,25 @@ label {
     width: 100px;
 }
 
-.menu {
-    width: 150px;
+.sezon {  
+    height: 173px;
+    width: 231px;
+    margin: 40px auto 0;
+    background-color: gray;
+    border-radius: 3%;
+    position: fixed;
+    right: 3% ;
+    top: 46%;
 }
 
-.menu:invalid+span:after {
-    content: '\2718';
-    color: red;
-    margin-left: 7px;
-}
-
-.menu:valid+span:after {
-    content: '\2714';
-    color: green;
-    margin-left: 7px;
-}
-
-.button {
-    width: 100%;
+#sborder{
+    height: 167px;
+    width: 233px;
     text-align: center;
-    /* background: lightgrey; */
-    border-radius: 5px;
-    padding: 10px 0;
+    border: 3px solid green;
+    position: fixed;
+    right: 4.5% ;
+    top: 50%;
+    padding: 15px;
+    margin-bottom: 15px;
 }
-
-.qwe {
-    border: 1px solid green;
-    width: 180px;
-    border-radius: 50px;
-    background: linear-gradient(to bottom, green, lightgreen, green);
-    line-height: 2em;
-    margin: 0;
-    font-weight: normal;
-}
-
-#button {
-    display: none;
-}
-
-#form label:nth-of-type(3n) {
-    margin-bottom: 30px;
-}
-.logo p{
-    font-size: 100px;
-    font-weight: 700;
-    float: inline-start;
-    width: 100%;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: green;
-    display: flex;
-    justify-content: ;
-}
-
