--- a/frontend/style.css
+++ b/frontend/style.css
@@ -22,8 +22,8 @@ img {
     font-family: 'Montserrat', sans-serif;
     text-align: center;
     min-width: 260px;
-    width: 40%;
-    margin: 30px 0;
+    width: 25%;
+    margin: 30px ;
     padding: 10px 0;
 }
 
@@ -85,18 +85,16 @@ img {
     border: 3px solid green;
     padding: 15px;
     margin-bottom: 15px;
-    position: fixed;
     border-radius: 3%;
 }
 
 .block {
-    height: 333px;
-    width: 233px;
+    height: 282px;
+    width: 100%;
     margin: 40px auto 0;
     background-color: gray;
     border-radius: 3%;
-    position: fixed;
-    right: 3% ;
+    right: 0 auto ;
 }
 p {
     font-weight: bold;
@@ -112,7 +110,7 @@ label {
     width: 100px;
 }
 
-.sezon {  
+/* .sezon {  
     height: 173px;
     width: 231px;
     margin: 40px auto 0;
@@ -133,4 +131,19 @@ label {
     top: 50%;
     padding: 15px;
     margin-bottom: 15px;
+} */
+
+b{
+    margin: 15px auto 0;
+    background: white; /* Цвет фона под заголовком */
+    color: black; /* Цвет текста */
+    padding: 5px; /* Поля вокруг текста */
+}
+.btn {
+    background: white; /* Цвет фона под заголовком */
+    color: black; /* Цвет текста */
+    padding: 5px; 
+    display: block;
+    margin: 15px auto;
+    
 }
